# el_decko_ui_gtk4

./: README.md  pyproject.toml
ed_ui_gtk4/: __init__.py  el_decko.py  el_decko_gtk4.py
ed_ui_gtk4/assets/: el_decko_ui_gtk4.desktop
